--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -42,11 +42,11 @@
             <h2>New Project Entry</h2>
             <form method="POST">
                 <div class="form-group">
-                    <label for="summary">Summary</label>
+                    <label for="summary">Project Summary</label>
                     <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the task">
                 </div>
                 <div class="form-group">
-                    <label for="description">Description</label>
+                    <label for="description">Project Description</label>
                     <textarea name="description" id="description" class="form-control" placeholder="Full description of the task" rows="5"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
