--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -43,11 +43,11 @@
             <form method="POST">
                 <div class="form-group">
                     <label for="summary">Project Summary</label>
-                    <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the task">
+                    <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the Project">
                 </div>
                 <div class="form-group">
                     <label for="description">Project Description</label>
-                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the task" rows="5"></textarea>
+                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the Project" rows="2"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
