--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
 
-            <h1>Project List</h1>
+            <h1>Complete Project List </h1>
 
             <!-- begin repeat for each entry -->
             <div class="panel panel-default">
