--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -39,7 +39,7 @@
             </div>
             <!-- end repeat for each entry -->
 
-            <h2>New Project Entry</h2>
+            <h2>New Project </h2>
             <form method="POST">
                 <div class="form-group">
                     <label for="summary">Project Summary</label>
