--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -39,14 +39,14 @@
             </div>
             <!-- end repeat for each entry -->
 
-            <h2>New Project </h2>
+            <h2>New Project Entry</h2>
             <form method="POST">
                 <div class="form-group">
-                    <label for="summary">Project Summary</label>
+                    <label for="summary"> Summary</label>
                     <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the Project">
                 </div>
                 <div class="form-group">
-                    <label for="description">Project Description</label>
+                    <label for="description">Description</label>
                     <textarea name="description" id="description" class="form-control" placeholder="Full description of the Project" rows="2"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
