--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
 
-            <h1>TODO list</h1>
+            <h1>Complete Project List</h1>
 
             <!-- begin repeat for each entry -->
             <div class="panel panel-default">
@@ -39,17 +39,17 @@
             </div>
             <!-- end repeat for each entry -->
 
-            <h2>New TODO entry</h2>
+            <h2>New Project Entry</h2>
             <form method="POST">
                 <div class="form-group">
                     <label for="summary">Summary</label>
-                    <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the task">
+                    <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the project">
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the task" rows="5"></textarea>
+                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the project" rows="5"></textarea>
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Save</button>
             </form>
 
         </div>
