--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -21,8 +21,34 @@
     <link type="text/css" rel="stylesheet" media="screen" href="../resources/css/bootstrap-theme.min.css"/>
 
 	
+	<link href="//assets.cms.gov/Resources/libs/jquery-ui/1.10.3/css/jquery-ui.css" rel="stylesheet">
+  <link href="//assets.cms.gov/resources/libs/bootstrap/2.2.2/css/bootstrap.css" rel="stylesheet">
+   <link href="//assets.cms.gov/resources/libs/bootstrap/2.2.2/css/bootstrap-responsive.css" rel="stylesheet">
+<link href="//assets.cms.gov/resources/libs/glyphicons/3.0/css/glyphicon.css" rel="stylesheet">
+<link href="//assets.cms.gov/resources/libs/font-awesome/3.0.2/css/symbol.css" rel="stylesheet">
+<link href="/resources/2.0/framework/css/style.css" rel="stylesheet">
+
+<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
+    	
+<!-- IE9 gradient support -->
+  <!--[if gte IE 9]>
+    <style type="text/css">
+      .gradient {
+        filter: none;
+      }
+    </style>
+  <![endif]-->
+	
 	</head>
 <body>
+
+  <script src="//assets.cms.gov/resources/libs/jquery/1.8.2/js/jquery-1.8.2.js" type="text/javascript" />
+<script src="//assets.cms.gov/resources/libs/jquery-ui/1.9.1/js/jquery-ui-1.9.1.js" type="text/javascript" />
+<script src="//assets.cms.gov/resources/libs/bootstrap/2.1.1/js/bootstrap.js" type="text/javascript" />
+<script src="//assets.cms.gov/resources/libs/hcmode-detection/js/hcmode-detection.js" type="text/javascript" />
 
 <div class="container-fluid">
     <div class="row">
@@ -35,9 +61,9 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">{{ summary }}</h3>
                 </div>
-                <div class="panel-body">
+               <!-- <div class="panel-body">
                     {{ description }}
-                </div>
+                </div>-->
             </div>
             <!-- end repeat for each entry -->
 
@@ -49,7 +75,7 @@
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the project" rows="3"></textarea>
+                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the project" rows="2"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Save</button>
             </form>
