--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -30,24 +30,32 @@
 
             <!-- begin repeat for each entry -->
             <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{{ summary }}</h3>
+			     <div class="panel-heading">
+                    <h3 class="panel-title">{{ project_code }}</h3>
                 </div>
-               <!-- <div class="panel-body">
-                    {{ description }}
-                </div>-->
+                <div class="panel-heading">
+                    <h3 class="panel-title">{{ name }}</h3>
+                </div>
+                <div class="panel-body">
+                    {{ status }}
+                </div>
             </div>
             <!-- end repeat for each entry -->
 
             <h2>New Project Entry</h2>
             <form method="POST">
-                <div class="form-group">
-                    <label for="summary">Summary</label>
-                    <input type="text" name="summary" id="summary" class="form-control" placeholder="Short summary of the project">
+			
+			    <div class="form-group">
+                    <label for="summary">Project Code : </label>
+                    <input type="text" name="project_code" id="project_code" class="form-control" placeholder="Project Code">
                 </div>
                 <div class="form-group">
-                    <label for="description">Description</label>
-                    <textarea name="description" id="description" class="form-control" placeholder="Full description of the project" rows="1"></textarea>
+                    <label for="summary">Project Name : </label>
+                    <input type="text" name="name" id="name" class="form-control" placeholder="Project name">
+                </div>
+                <div class="form-group">
+                    <label for="description">Status </label>
+                     <input type="text" name="status" id="status" class="form-control" placeholder="project status" >
                 </div>
                 <button type="submit" class="btn btn-default">Save</button>
             </form>
