--- a/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
+++ b/todolist/todolist-jdbc/src/main/webapp/WEB-INF/index.html
@@ -122,6 +122,7 @@
                      <textarea name="description" id="description" class="form-control" placeholder="Full description of the project" rows="4"></textarea> 
                  </div>
                 <b> <button type="submit" class="btn btn-default">Save</button></b>
+                <b> <button type="reset" class="btn btn-default">Reset</button></b>
             </form>  
                 
         
